tests/res/narrowing/field_narrow_mut_error.say
// A `mut` field does not narrow, since a call could change it between check and use.
type Node {
    pub mut prev?;
    pub fn check() {
        if (this.prev != null) {
            this.prev.x; // error: Value may be null; narrow it before use
        }
    }
}
